# parallel

./: .gitignore  CMakeLists.txt  guard.h  test.cpp  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h
presentation/: slides.md
src/: CMakeLists.txt  defer.h  guard.h  once.h  platform.h  state.h  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h
test/: CMakeLists.txt  state.cpp  thread_pool.cpp
